[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Characters/Monster/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Skull.gd" type="Script" id=2]
[ext_resource path="res://GFX/Enemies/skull/idle/tile000.png" type="Texture" id=3]
[ext_resource path="res://GFX/Enemies/skull/idle/tile001.png" type="Texture" id=4]
[ext_resource path="res://GFX/Enemies/skull/idle/tile002.png" type="Texture" id=5]
[ext_resource path="res://GFX/Enemies/skull/idle/tile003.png" type="Texture" id=6]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-1.png" type="Texture" id=7]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-2.png" type="Texture" id=8]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-3.png" type="Texture" id=9]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-4.png" type="Texture" id=10]
[ext_resource path="res://GFX/Enemies/enemy-death/enemy-death-5.png" type="Texture" id=11]
[ext_resource path="res://GFX/Enemies/skull/attack/tile000.png" type="Texture" id=12]
[ext_resource path="res://GFX/Enemies/skull/attack/tile001.png" type="Texture" id=13]
[ext_resource path="res://GFX/Enemies/skull/attack/tile002.png" type="Texture" id=14]
[ext_resource path="res://GFX/Enemies/skull/attack/tile003.png" type="Texture" id=15]
[ext_resource path="res://GFX/Enemies/skull/attack/tile004.png" type="Texture" id=16]
[ext_resource path="res://GFX/Enemies/skull/attack/tile005.png" type="Texture" id=17]
[ext_resource path="res://GFX/Enemies/skull/attack/tile006.png" type="Texture" id=18]
[ext_resource path="res://GFX/Enemies/skull/attack/tile007.png" type="Texture" id=19]
[ext_resource path="res://Scripts/StateMachine/State/Skull/idle_skull.gd" type="Script" id=20]
[ext_resource path="res://Scripts/StateMachine/State/Skull/attack_skull.gd" type="Script" id=21]
[ext_resource path="res://Scripts/StateMachine/State/Skull/die_skull.gd" type="Script" id=22]
[ext_resource path="res://Scripts/StateMachine/State/Skull/hit_skull.gd" type="Script" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7.01397, 12.6118 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 14.5602, 20.3114 )

[sub_resource type="Animation" id=3]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 66.2169

[node name="Skull" instance=ExtResource( 1 )]
collision_layer = 32
script = ExtResource( 2 )

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )
frame = 1

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( -1.17035, 9.64014 )
shape = SubResource( 5 )

[node name="idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource( 20 )

[node name="attack" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 21 )

[node name="die" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 22 )

[node name="hit" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 23 )

[node name="DetectBody" parent="." index="5"]
position = Vector2( -0.554779, 4.16085 )

[node name="CollisionShape2D2" parent="DetectBody" index="0"]
shape = SubResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/hit = SubResource( 3 )

[node name="DetectEnemy" type="Area2D" parent="." index="7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectEnemy" index="0"]
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 2.0
one_shot = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="DetectBody" to="." method="_on_DetectBody_area_entered"]
[connection signal="body_entered" from="DetectEnemy" to="." method="_on_DetectEnemy_body_entered"]
[connection signal="body_exited" from="DetectEnemy" to="." method="_on_DetectEnemy_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
